# ubio_autobox

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pixi.toml  pyproject.toml  ruff.toml  setup.cfg  setup.py
data/database/: .gitkeep
ubio_autobox/: definitions.py
ubio_autobox/assets/: illumina_workflow.py
